# pwcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
pwcp/: __init__.py  config.py  errors.py  hooks.py  monkeypatch.py  preprocessor.py  runner.py  utils.py  version.py
tests/: bytecode_test.ppy  comments.ppy  compile.py  error_directive.ppy  hello.ppy  hello.py  main.py  not_a_comment.ppy  rick_astley.pyh  syntax_error.ppy  test_modules.ppy  test_pwcp.py  type_error.ppy
tests/a_module/: __init__.ppy  __main__.ppy  regular_py.py  something.ppy
