[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[project]
name = "pwcp"
description = "Python with C preprocessor"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">= 3.7"
dependencies = ["pypp-for-pwcp==1.33b5"]
optional-dependencies = {tests = ["pytest"]}
dynamic = ["version"]
scripts = {pwcp = "pwcp:main"}

[tool.hatch.build.targets.wheel]
packages = ["pwcp"]

[tool.hatch.version]
path = "pwcp/version.py"
